# migration-orchestrator

./: .env.example  .gitignore  CHANGELOG.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/orchestrator/: .env.example  README.md  alembic.ini  pyproject.toml
apps/orchestrator/alembic/: env.py
apps/orchestrator/alembic/versions/: 9f4bce7a1d2e_add_runtime_task_tables.py  a3d8e2f91b4c_add_cache_creation_tokens.py  cb0a1fb6f34a_baseline_schema.py
apps/orchestrator/docs/: improvement-spec.md  phase6-spec.md
apps/orchestrator/scripts/: test_playwright_login.py
apps/orchestrator/src/: config.py  logging_setup.py  main.py
apps/orchestrator/src/api/: validators.py
apps/orchestrator/src/db/: deps.py  models.py  session.py
apps/orchestrator/src/git/: manager.py
apps/orchestrator/src/pipeline/: engine.py  state_machine.py  workspace.py
apps/orchestrator/tests/: conftest.py  test_alembic_baseline.py  test_analysis_worker.py  test_api.py  test_boot.py  test_claude_cli.py  test_clock.py  test_config.py  test_cost_tracking.py  test_db_session.py  test_engine.py  test_event_bus.py  test_git_manager.py  test_logging_setup.py  test_mcp_worker.py  test_models.py  test_parallel_limit.py  test_pipeline_bg_failure.py  test_pipeline_e2e.py  test_playwright_worker.py  test_session_factory.py  test_spec_loader.py  test_state_machine.py  test_step6_java_test.py  test_step8_equivalence.py  test_steps_codegen.py  test_steps_integration.py  test_validators.py  test_visual_compare.py  test_websocket.py  test_worktree.py  test_worktree_pipeline.py
(+246 files in other folders)
